--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ repository = "https://github.com/yonatan-reicher/nessie-parse"
 [dependencies]
 indoc = "2"
 functionality = "1"
+derive_more = { version = "2.0.1", features = ["from"] }
